--- a/style.css
+++ b/style.css
@@ -22,6 +22,23 @@
   padding-right: 10%;
 }
 
+#section2 {
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+#firstperson {
+  padding: 5%;
+}
+
+.testimonial {
+  margin-top: 3%;
+  margin-left: 5%;
+  margin-right: 5%;
+  background-color: teal;
+}
+
 .bannerquote {
   font-size: 2em;
   text-align: center;
@@ -44,6 +61,7 @@ h1 {
 }
 
 .container {
+  margin-top: 3%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -55,4 +73,8 @@ h1 {
   padding: 5%;
   flex-basis: auto;
   font-size: 20px;
+}
+
+#footer {
+  text-align: center;
 }
