--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
   background-size: cover;
   padding: 30% 10%;
   text-align: center;
+  box-shadow: 0px 0px 20px #888888;
 }
 
 #taglinetext{
@@ -27,10 +28,13 @@
 }
 
 .test{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   background-color: #ececec;
-  border-top: 1px solid grey;
-  border-bottom: 1px solid grey;
   padding: 10% 10%;
+  text-align: center;
+  box-shadow: 0px 10px 15px #cecece;
 }
 
 .lastcta{
@@ -48,6 +52,19 @@ footer{
 }
 /**********TABLET*************/
 @media screen and (min-width: 750px) {
+  #tagline{
+    background-position: center center;
+    padding: 10% 10%;
+    text-align: center;
+  }
+
+  #taglinetext{
+    color: white;
+    font-size: 200%;
+    text-shadow: 2px 2px grey;
+    font-weight: bold;
+    padding-top: 10%;
+  }
 
 }
 
@@ -77,11 +94,16 @@ footer{
     background: #53b0bd;
     font-family: 'Ubuntu', sans-serif;
     margin: 0 auto;
+    /*transition-property: background;*/
+    transition-property: all;
+    transition-duration: .25s;
+    transition-timing-function: linear;
   }
 
   .cta:hover{
     color: white;
     background: #12646f;
+    border-radius: 25px;
   }
 
   .lastcta{
@@ -99,7 +121,9 @@ footer{
   .test{
     display: flex;
     align-items: center;
+    flex-direction: row;
     padding: 5% 10%;
+    text-align: left;
   }
 
   .testText{
