--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,23 @@
   padding: 10% 10%;
 }
 
+#team{
+    background-image: url(../img/group.png);
+    padding: 15% 10%;
+    background: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+.teamText{
+  color: white;
+  font-weight: bold;
+  font-size: 200%;
+  text-align: center;
+  text-shadow: 2px 2px black;
+}
+
 .test{
   display: flex;
   justify-content: center;
@@ -60,7 +77,7 @@ footer{
 
   #taglinetext{
     color: white;
-    font-size: 200%;
+    font-size: 400%;
     text-shadow: 2px 2px grey;
     font-weight: bold;
     padding-top: 10%;
@@ -70,10 +87,106 @@ footer{
 
 /**********TABLET LANDSCAPE*************/
 @media screen and (min-width: 750px) and (orientation: landscape){
+  #team{
+      background-image: url(../img/group.png);
+      padding: 10% 10%;
+      background: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: 100%;
+  }
+
+  .teamText{
+    color: white;
+    font-weight: bold;
+    font-size: 400%;
+    text-align: center;
+    text-shadow: 2px 2px black;
+  }
+
 }
 
-/**********DESKTOP*************/
+/**********iPad*************/
 @media screen and (min-width: 1000px) {
+  #tagline{
+    background-position: center center;
+    padding: 10% 10%;
+    text-align: center;
+  }
+
+  #taglinetext{
+    color: white;
+    font-size: 200%;
+    text-shadow: 2px 2px grey;
+    font-weight: bold;
+    padding-top: 10%;
+  }
+
+  .cta{
+    border: none;
+    padding: 2%;
+    background: #53b0bd;
+    font-family: 'Ubuntu', sans-serif;
+    margin: 0 auto;
+    /*transition-property: background;*/
+    transition-property: all;
+    transition-duration: .25s;
+    transition-timing-function: linear;
+  }
+
+  .cta:hover{
+    color: white;
+    background: #12646f;
+    border-radius: 25px;
+  }
+
+  .lastcta{
+    padding-top: 2%;
+    padding-left: 0%;
+    padding-right: 0%;
+    padding-bottom: 0%;
+    text-align: center;
+  }
+
+  .bodycopy{
+    padding: 5% 10%;
+  }
+
+  .test{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    padding: 5% 10%;
+    text-align: left;
+  }
+
+  .testText{
+    padding-left: 5%;
+  }
+
+  #team{
+      background-image: url(../img/group.png);
+      padding: 15% 10%;
+      background: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: 100%;
+  }
+
+  .teamText{
+    color: white;
+    font-weight: bold;
+    font-size: 400%;
+    text-align: center;
+    text-shadow: 2px 2px black;
+  }
+
+
+}
+
+
+/**********DESKTOP*************/
+@media screen and (min-width: 1080px) {
   #tagline{
     background-position: center center;
     padding: 10% 10%;
@@ -128,6 +241,23 @@ footer{
 
   .testText{
     padding-left: 5%;
+  }
+
+  #team{
+      background-image: url(../img/group.png);
+      padding: 15% 10%;
+      background: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: 100%;
+  }
+
+  .teamText{
+    color: white;
+    font-weight: bold;
+    font-size: 600%;
+    text-align: center;
+    text-shadow: 2px 2px black;
   }
 
 
