--- a/css/quote.css
+++ b/css/quote.css
@@ -31,6 +31,10 @@ ul {
   margin-left: 0;
 }
 
+li {
+  font-size: 30px;
+}
+
 .graySection {
   background: #fbfbfb;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #ececec, #fbfbfb);  /* Chrome 10-25, Safari 5.1-6 */
@@ -98,5 +102,23 @@ button {
   text-transform: uppercase;
   font-size: 1.5em;
   padding: 0.5em;
-  width: 100%;
+  width: 95%;
+}
+
+/**********PHONE LANDSCAPE*************/
+@media screen and (orientation: landscape) {
+
+}
+/**********TABLET*************/
+@media screen and (min-width: 750px) {
+
+}
+
+/**********TABLET LANDSCAPE*************/
+@media screen and (min-width: 750px) and (orientation: landscape){
+}
+
+/**********DESKTOP*************/
+@media screen and (min-width: 1000px) {
+
 }
