--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@
 #taglinetext{
   font-weight: bold;
   padding-top: 20%;
+  font-size: 150%;
 }
 
 .cta{
@@ -65,6 +66,26 @@ footer{
 
 /**********PHONE LANDSCAPE*************/
 @media screen and (orientation: landscape) {
+    #tagline{
+      padding: 10% 10%;
+    }
+
+    #taglinetext{
+      color: white;
+      font-weight: bold;
+      padding-top: 5%;
+      font-size: 175%;
+      text-shadow: 2px 1px grey;
+    }
+
+    .lastcta{
+      padding: 4%;
+    }
+
+    footer{
+      padding: 0;
+      margin: 0;
+    }
 
 }
 /**********TABLET*************/
