--- a/style.css
+++ b/style.css
@@ -85,8 +85,18 @@ h1 {
   margin-top: 16%;
 }
 
+/*****FOOTER*****/
 #footer {
   text-align: center;
+  background-color: #ececec;
+  padding: 1.5em;
+  margin-top: 2em;
+  font-size: 0.5em;
+}
+
+#footerLogo {
+  width: 15%;
+  height: 15%;
 }
 
 
