--- a/css/quote.css
+++ b/css/quote.css
@@ -131,6 +131,21 @@ button {
 #prop-title-div, #cost-title {
   text-align: center;
 }
+
+/* FOOTER SECION*/
+#footer {
+  text-align: center;
+  background-color: #ececec;
+  padding: 1.5em;
+  margin-top: 2em;
+  font-size: 1em;
+}
+
+#footerLogo {
+  width: 15%;
+  height: 15%;
+}
+
 /**********PHONE LANDSCAPE*************/
 @media screen and (orientation: landscape) {
   * {
