--- a/css/quote.css
+++ b/css/quote.css
@@ -70,6 +70,8 @@ button:hover {
   background: #fbfbfb;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #c2b394, #fbfbfb);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #c2b394, #fbfbfb); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  text-align: center;
+  line-height: 2;
 }
 
 /*INTRO SECTION*/
@@ -124,15 +126,28 @@ button {
   width: 95%;
 }
 
+.strategy-ul, .about-div, .provide-list, .costBreakdown {
+  text-align: left;
+}
+#strategy-ul, #provide-list, #about-div, #costBreakdown {
+  width: 75%;
+  margin: 0 auto;
+}
+
 #project-title, #client-name, #timeline, #totalCost {
   font-size: 34px;
 }
 
-#prop-title-div, #cost-title {
-  text-align: center;
+#name-italic {
+  font-style: italic;
+  font-size: 1em;
 }
 
-/* FOOTER SECION*/
+#cost-title {
+  color: #000;
+}
+
+/* FOOTER SECTION*/
 #footer {
   text-align: center;
   background-color: #ececec;
