updated font size on requested timeline value in quote form

--- a/css/quote.css
+++ b/css/quote.css
@@ -134,7 +134,7 @@ button {
   margin: 0 auto;
 }
 
-#project-title, #client-name, #timeline, #totalCost {
+#project-title, #client-name, #timeline, #reqTimeline, #totalCost {
   font-size: 34px;
 }
 
