--- a/css/contact.css
+++ b/css/contact.css
@@ -114,6 +114,19 @@ label {
   width: 17%;
   height: 17%;
 }
+
+/*****FOOTER*****/
+#footer {
+  text-align: center;
+  background-color: #ececec;
+  padding: 1.5em;
+  font-size: 1em;
+}
+
+#footerLogo {
+  width: 15%;
+  height: 15%;
+}
 /**********PHONE LANDSCAPE*************/
 @media screen and (orientation: landscape) {
 
