--- a/css/style.css
+++ b/css/style.css
@@ -205,4 +205,12 @@ h1 {
   flex-direction: row;
   display: flex;
 }
+
+.row {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.column {
+  flex-grow: 1;
 }
