--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ h1 {
   margin-top: 3%;
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: center;
 }
 
 .bio {
