--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ h1 {
   margin-top: 3%;
   display: flex;
   justify-content: center;
-  flex-direction: center;
+  flex-direction: column;
 }
 
 .bio {
@@ -118,6 +118,20 @@ h1 {
   width: 15%;
   height: 15%;
 }
+
+.container2 {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-basis: 20%;
+  margin: 5%;
+  margin-top: 0%;
+}
+
+#alicia {
+  margin-top: 5%;
+}
+
 
 
 /**********PHONE LANDSCAPE*************/
@@ -203,7 +217,6 @@ h1 {
     position: fixed;
     margin-left: 3%;
   }
-}
 
 .bannerquote {
   font-size: 2em;
@@ -235,9 +248,11 @@ h1 {
   flex-grow: 1;
 }
 
-#container {
+.container {
   margin-top: 3%;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
 }
