--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,5 @@
 p {
-  font-size: 14px;
+  font-size: 16px;
   font-style: 'Ubuntu', sans-serif;
 }
 
@@ -94,9 +94,13 @@ label {
 
 #submitMsg {
   background-color: #12646f;
-  text-shadow: 0 0 2px black;
+  color: white;
+  text-shadow: 0 0 1px black;
+  font-weight: bold;
   margin: 0;
   padding: 2%;
+  width: 100% auto;
+  text-align: center;
 }
 
 #emailAddress:hover {
@@ -134,20 +138,27 @@ label {
 }
 
 /*****FOOTER*****/
-#footer {
+footer {
   text-align: center;
-  background-color: #ececec;
-  padding: 1.5em;
-  font-size: 1em;
+  font-size: .5em;
 }
 
 #footerLogo {
-  width: 15%;
-  height: 15%;
+    width: 42%;
+    height: 15%;
 }
 /**********PHONE LANDSCAPE*************/
 @media screen and (orientation: landscape) {
+  footer {
+    font-size: .5em;
+    padding: 0;
+    margin: 0;
+  }
 
+  #footerLogo {
+      width: 28%;
+      height: 15%;
+  }
 }
 /**********TABLET*************/
 @media screen and (min-width: 750px) {
@@ -193,5 +204,18 @@ label {
 
   input {
     width: 80%;
+  }
+
+  footer {
+    text-align: center;
+    background-color: #ececec;
+    padding: 1.5em;
+    font-size: 1em;
+  }
+
+  #footerLogo {
+      margin-top: 2%;
+      width: 10%;
+      height: 15%;
   }
 }
