fixed issued from TA edits

--- a/css/style.css
+++ b/css/style.css
@@ -61,12 +61,12 @@
 	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
 
-.testimonialimg {
+.topimg {
   padding: 2%;
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
 }
 
 .testimonial {
@@ -80,11 +80,10 @@ h1 {
 
 
 .container {
-  height:100%
   margin-top: 3%;
-  /*display: flex;
+  display: flex;
   justify-content: center;
-  flex-direction: column;*/
+  flex-direction: column;
 }
 
 .bio {
@@ -107,34 +106,35 @@ h1 {
   margin-left: 5%;
 }
 
-.topthreedivs {
-  width: 33%;
-  margin: 0;
-  padding: 0;
-  float: left;
-}
-
-.bottomtwo {
-  width: 49%;
-  float:left;
-}
-
 /*****FOOTER*****/
-/*#footer {
+#footer {
   text-align: center;
   background-color: #ececec;
   padding: 1.5em;
   margin-top: 2em;
   font-size: 0.5em;
-}*/
+}
 
 #footerLogo {
   width: 15%;
   height: 15%;
 }
 
-#bottomcontainer {
-  float:left;
+.container2 {
+ display: flex;
+ flex-direction: column;
+ flex-grow: 1;
+ flex-basis: 20%;
+ margin: 5%;
+ margin-top: 0%;
+}
+
+#alicia {
+margin-top: -10%;
+}
+
+#devin {
+margin-top: -5%;
 }
 
 /**********PHONE LANDSCAPE*************/
@@ -189,7 +189,7 @@ h1 {
   }
   .topNav {
     background-color: transparent;
-    /*display: flex;*/
+    display: flex;
     flex-direction: row;
     flex-grow: 1;
     flex-wrap: wrap;
@@ -214,44 +214,43 @@ h1 {
     margin-left: 3%;
   }
 
-.bannerquote {
-  color: black;
-  font-size: 2em;
-  text-align: center;
-  text-shadow: none;
-}
+  .bannerquote {
+    color: black;
+    font-size: 2em;
+    text-align: center;
+    text-shadow: none;
+    }
 
-#contactBottom {
-  background: url(../img/mountain.jpg);
-  background-position: center center;
-  height: 50vh;
-  background-size: cover;
-  padding-top: 31%;
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-bottom: 47%;
-}
+  #contactBottom {
+    background: url(../img/mountain.jpg);
+    background-position: center center;
+    height: 50vh;
+    background-size: cover;
+    padding-top: 31%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 47%;
+  }
 
-.testimonial {
-  /*flex-direction: row;
-  display: flex;*/
-}
+  .testimonial {
+    flex-direction: row;
+    display: flex;
+  }
 
-.row {
-  display: flex;
-  flex-direction: row-reverse;
-}
+  .row {
+    display: flex;
+    flex-direction: row-reverse;
+  }
 
-.column {
-  flex-grow: 1;
-}
+  .column {
+    flex-grow: 1;
+  }
 
-.container {
-  margin-top: 3%;
-  
-  display: flex;
-  justify-content: space-around;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
+  .container {
+    margin-top: 3%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
