--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,8 @@
   margin-right: 5%;
   background-color: aquamarine;
   font-size: 30px;
+  border-top: solid 1px black;
+  border-bottom: solid 1px black;
 }
 
 .bannerquote {
@@ -66,12 +68,6 @@
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  /*margin: 0 auto;*/
-}
-
-.testimonial {
-  border-top: solid 1px black;
-  border-bottom: solid 1px black;
 }
 
 h1 {
@@ -83,7 +79,7 @@ h1 {
   margin-top: 3%;
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .bio {
@@ -233,8 +229,10 @@ margin-top: -5%;
   }
 
   .testimonial {
-    flex-direction: row;
     display: flex;
+    align-items: center;
+    flex-direction: row;
+    text-align: left;
   }
 
   .row {
