--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,5 @@
 p {
-  font-size: 16px;
+  font-size: 50px;
   font-style: 'Ubuntu', sans-serif;
 }
 
@@ -13,48 +13,49 @@ h1 {
   background-color: #ececec;
   margin: 20% 5% 3% 5%;
   padding-top: 3%;
-  font-size: 30px;
+  font-size: 4em;
 }
 
 h2 {
   text-align: center;
-  font-size: 20px;
+  font-size: 3em;
   line-height: 44px;
   color: #fbfbfb;
 }
 
 h3  {
   text-align: center;
+  font-size: 2.5em;
 }
 
 form {
   margin: 20% 5% 0 5%;
   padding: 2% 35% 1% 2%;
   font-style: 'Ubuntu', sans-serif;
-  font-size: 16px;
+  font-size: 1em;
 }
 
 fieldset {
   padding: 5%;
-  font-size: 1.5em;
 }
 
 input, textarea {
   margin-bottom: 3%;
-  font-size: .7em;
-  resize: none;
+  font-size: 2em;
+  width: 95%;
+  padding: 0.5em;
 }
 
 legend {
   font-weight: bold;
-  font-size: 22px;
+  font-size: 3em;
   color: #ffffff;
   text-shadow: #000 1px 1px 2px;
   width: 100%;
 }
 
 label {
-  font-size: 18px;
+  font-size: 2.5em;
   width: 100%;
   color: #ffffff;
   text-shadow: #000 1px 1px 2px;
@@ -62,7 +63,7 @@ label {
 
 .row {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column;
 }
 
 .column {
@@ -70,8 +71,8 @@ label {
 }
 
 #columnOne {
-  flex-basis: 50%;
-  width: 340px;
+  flex-basis: 100%;
+  margin-bottom: 15%;
 }
 
 #contactForm {
@@ -88,15 +89,15 @@ label {
 }
 
 #formButton {
+  width: 100%;
   border: none;
   padding: 5%;
   background: #ececec;
   color: #12646f;
-  font-size: .8em;
-  font-weight: 1px;
+  font-size: 3em;
   font-family: 'Ubuntu', sans-serif;
   padding: 2% 2% 2% 2%;
-  margin: 5% 1% 1% 2%;
+  margin: 5% 0 0 0;
   border-radius: 5px;
   border-bottom: 5px solid #c2b394;
   border-right: 3px solid #c2b394;
@@ -172,12 +173,32 @@ footer {
 }
 /**********PHONE LANDSCAPE*************/
 @media screen and (orientation: landscape) {
+  p {
+    font-size: 30px;
+  }
+  h1 {
+    font-size: 3em;
+  }
+  h2 {
+    font-size: 2.5em;
+  }
+  h3 {
+    font-size: 2em;
+  }
+  legend {
+    font-size: 2.5em;
+  }
+  label {
+    font-size: 1.75em;
+  }
   footer {
     font-size: .5em;
     padding: 0;
     margin: 0;
   }
-
+  #formButton {
+    font-size: 2em;
+  }
   #footerLogo {
       width: 28%;
       height: 15%;
@@ -197,50 +218,58 @@ footer {
     margin: 0;
     padding: 3% 0 3% 0;
     background-color: #ececec;
+    font-size: 2em;
   }
-
-  #intro {
-    background-color: #ececec;
-    padding: 10% 0 2% 0;
-    margin: 0;
+  h2 {
+    font-size: 1.75em;
   }
-
-  .row {
-    display: flex;
-    flex-direction: row-reverse;
+  h3 {
+    font-size: 1.25em;
   }
-
-  .column {
-    flex-grow: 1;
+  legend {
+    font-size: 1.5em;
   }
-
-  #columnOne {
-    flex-basis: 50%;
-    width: 340px;
+  label {
+    font-size: 1.25em;
   }
-
-  #contactForm {
-    margin: 0;
-    padding: 0;
-    width: 100%;
+  input, textarea {
+    font-size: 1em;
+    padding: 0.25em;
+    width: 95%;
   }
-
-  input {
-    width: 80%;
-  }
-
   footer {
     text-align: center;
     background-color: #ececec;
     padding: 1.5em;
     font-size: 1em;
   }
-
   footer p {
     font-size: 1em;
     font-family: 'Cabin'
   }
-
+  .row {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .column {
+    flex-grow: 1;
+  }
+  #intro {
+    background-color: #ececec;
+    padding: 10% 0 2% 0;
+    margin: 0;
+  }
+  #columnOne {
+    flex-grow: 2;
+  }
+  #contactForm {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
+  #formButton {
+    font-size: 1.5em;
+  }
   #footerLogo {
       margin-top: 2%;
       width: 10%;
