formatting and copy

--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,11 @@ button {
   padding: 10% 10%;
 }
 
+#aboutText {
+  font-weight: bold;
+  text-align: center;
+}
+
 .teamText{
   color: white;
   font-weight: bold;
