--- a/css/contact.css
+++ b/css/contact.css
@@ -148,20 +148,22 @@ a {
   padding: 5% 10% 5% 10%;
 }
 
-#socialLogos {
-  margin: 0;
-  display: flex;
+.socialLogos {
+  width: 100%;
+  display: inline-flex;
   justify-content: center;
+  align-items: center;
 }
 
 #instagram {
-  width: 8%;
-  height: 8%;
+  width: 48px;
+  height: 48px;
 }
 
 #facebook {
-  width: 14%;
-  height: 14%;
+  width: 68px;
+  height: 47px;
+  padding-top: 3px;
 }
 
 /**********PHONE LANDSCAPE*************/
