--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 p {
   font-size: 50px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 button {
@@ -20,6 +21,7 @@ button {
 }
 
 .teamText{
+  font-family: 'Cabin', sans-serif;
   color: white;
   font-weight: bold;
   font-size: 4em;
@@ -65,6 +67,7 @@ button {
 }
 
 #taglinetext{
+  font-family: 'Cabin', sans-serif;
   color: white;
   font-weight: bold;
   padding-top: 20%;
